added inventory project

--- a/index.html
+++ b/index.html
@@ -120,15 +120,15 @@
             </div>
             <!-- Featured Project Row-->
             <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/immunyville.png"
+                <div class="col-xl-7 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/immunyville.png"
                         alt="..." /></div>
-                <div class="col-xl-4 col-lg-5">
+                <div class="col-xl-5 col-lg-5">
                     <div class="featured-text text-lg-left">
                         <h2 class="text-center">ImmunyVille</h2>
                         <h5 class="text-black mb-0 text-center">An android game application developed as a capstone
                             project to promote having a healthy immune system.</h5>
                         <ul class="text-black- mb-0 text-left">
-                            <li>Developer - Capstone Project</li>
+                            <li>Role: Developer - Capstone Project</li>
                             <li>Language: C#</li>
                             <li>Developed using Unity and Visual Studio Code</li>
                             <li>Agile Development</li>
@@ -145,6 +145,33 @@
                         </ul>
                     </div>
                 </div>
+            </div>
+
+            <!-- Featured Project Row-->
+            <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
+                <div class="col-xl-5 col-lg-5">
+                    <div class="featured-left-text text-lg-left">
+                        <h2 class="text-center">Inventory Management System</h2>
+                        <h5 class="text-black mb-0 text-center">A mobile application that automates inventory management with the help of qr code technology.</h5>
+                        <ul class="text-black- mb-0 text-left">
+                            <li>Language: Java</li>
+                            <li>Developed using Android Studio</li>
+                            <li>Agile Development</li>
+                            <li>
+                                App Features
+                                <ul>
+                                    <li>Login system using mobile number OTP</li>
+                                    <li>CRUD functions using Firebase Realtime database</li>
+                                    <li>Generating and scanning QR codes to display item data</li>
+                                    <li>Export and Import data using .xls files</li>
+                                    <li>Logs and Stats window to keep track of overall status</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-xl-7 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/inventory.jpg"
+                        alt="..." /></div>
             </div>
             
         </div>
